app/system/assets/less/pagekit.less
/* ========================================================================
   Pagekit
 ========================================================================== */

[v-cloak] { display: none; }


/* Sidebar
========================================================================== */

.pk-width-sidebar {
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    width: 100%;
}

/* Tablet and bigger */
@media (min-width: @breakpoint-medium) {

    /*
     * Width
     */

    .pk-width-sidebar { width: (200px + @global-grid-gutter); }

}

/*
 * Large Gutter
 */

/* Desktop and bigger */
@media (min-width: @breakpoint-large) {

    /*
     * Gutter
     */

    /* Horizontal */
    .pk-grid-large { margin-left: -40px; }
    .pk-grid-large > * { padding-left: 40px; }

    /* Vertical */
    .pk-grid-large + .pk-grid-large,
    .pk-grid-large > .uk-grid-margin,
    .pk-grid-large > * > .uk-panel + .uk-panel { margin-top: 40px; }

    /*
     * Width
     */

    .pk-width-sidebar { width: (250px + 40px); }

}

/* Large screen and bigger */
@media (min-width: @breakpoint-xlarge) {

    /*
     * Gutter
     */

    /* Horizontal */
    .pk-grid-large { margin-left: -50px; }
    .pk-grid-large > * { padding-left: 50px; }

    /* Vertical */
    .pk-grid-large + .pk-grid-large,
    .pk-grid-large > .uk-grid-margin,
    .pk-grid-large > * > .uk-panel + .uk-panel { margin-top: 50px; }

    /*
     * Width
     */

    .pk-width-sidebar { width: (250px + 50px); }

    .pk-width-sidebar-large { width: (270px + 50px); }

}


/* Modifier: Side Nav Large (System: Settings + Info, Site: Settings)
========================================================================== */

.pk-nav-large > li > a {
    padding-top: 14px;
    padding-bottom: 14px;
}


/* Side Nav Sortable (Users: Roles)
========================================================================== */

.pk-sortable-dragged-list > * {
    display: block;
    padding: 8px 16px;
    background: #fff;
    box-shadow: 0 3px 5px rgba(0,0,0,0.1);
    color: @global-color;
}


/* Panel Sortable (Dashboard)
========================================================================== */

.pk-sortable {
    padding: 0;
    list-style: none;
    min-height: 300px;
}

.pk-sortable > li + li { margin-top: @grid-gutter-vertical; }

.pk-sortable-dragged-panel > * { box-shadow: 0 5px 20px rgba(0,0,0,0.2); }


/* Modifier: Search
========================================================================== */

.pk-search {
    margin-left: 25px;
    padding-left: 15px;
    border-left: 1px solid @global-border;
}

/* Modifier: Badge
========================================================================== */

.pk-badge-justify {
    box-sizing: border-box;
    width: 100px;
}


/* SVG Icons
 ========================================================================== */

[class*='pk-icon-'] {
    display: inline-block;
    width: 20px;
    height: 20px;
    background-repeat: no-repeat;
    background-position: 50% 50%;
    vertical-align: middle;
}

.pk-icon-contain { background-size: contain; }

.pk-icon-delete { background-image: url("../images/icon-delete.svg"); }
.pk-icon-block { background-image: url("../images/icon-block.svg"); }
.pk-icon-check { background-image: url("../images/icon-check.svg"); }
.pk-icon-copy { background-image: url("../images/icon-copy.svg"); }
.pk-icon-warning { background-image: url("../images/icon-warning.svg"); }
.pk-icon-edit { background-image: url("../images/icon-edit.svg"); }
.pk-icon-comment { background-image: url("../images/icon-comment.svg"); }
.pk-icon-schedule { background-image: url("../images/icon-schedule.svg"); }
.pk-icon-spam { background-image: url("../images/icon-spam.svg"); }
.pk-icon-thumbnails { background-image: url("../images/icon-thumbnails.svg"); }
.pk-icon-table { background-image: url("../images/icon-table.svg"); }
.pk-icon-reply { background-image: url("../images/icon-reply.svg"); }
.pk-icon-calendar { background-image: url("../images/icon-calendar.svg"); }
.pk-icon-time { background-image: url("../images/icon-time.svg"); }
.pk-icon-info { background-image: url("../images/icon-info.svg"); }
.pk-icon-permission { background-image: url("../images/icon-permission.svg"); }
.pk-icon-select { background-image: url("../images/icon-select.svg"); }
.pk-icon-home { background-image: url("../images/icon-home.svg"); }
.pk-icon-home-active { background-image: url("../images/icon-home-active.svg"); }
.pk-icon-settings { background-image: url("../images/icon-settings.svg"); }
.pk-icon-refresh { background-image: url("../images/icon-refresh.svg"); }
.pk-icon-star { background-image: url("../images/icon-star.svg"); }
.pk-icon-share { background-image: url("../images/icon-share.svg"); }
.pk-icon-move { background-image: url("../images/icon-move.svg"); }
.pk-icon-pen { background-image: url("../images/icon-pen.svg"); }
.pk-icon-link { background-image: url("../images/icon-link.svg"); }
.pk-icon-bell { background-image: url("../images/icon-bell.svg"); }

.pk-icon-folder-circle,
.pk-icon-file-circle {
    width: 30px;
    height: 30px;
    margin: -2px;
}

.pk-icon-folder-circle { background-image: url("../images/icon-folder-circle.svg"); }
.pk-icon-file-circle { background-image: url("../images/icon-file-circle.svg"); }

.pk-icon-arrow-up,
.pk-icon-arrow-down {
    width: 9px;
    height: 11px;
}

.pk-icon-arrow-up { background-image: url("../images/icon-arrow-up.svg"); }
.pk-icon-arrow-down { background-image: url("../images/icon-arrow-down.svg"); }

[class*='pk-icon-circle'] {
    width: 12px;
    height: 12px;
    border-radius: 50px;
    background: @global-muted-color;
}

.pk-icon-circle-primary { background: @global-primary-background; }
.pk-icon-circle-success { background: @global-success-background; }
.pk-icon-circle-danger { background: @global-danger-background; }
.pk-icon-circle-warning { background: @global-warning-background; }
/* ... */

